--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "scripts": {
     "test": "mocha tests/tests.js",
-    "build_server": "rsync -rv html/ build_html; browserify standalone/browserify.js > ./build_html/static/js/jstiller.browser.js",
+    "build_server": "copy -rv ./html/ ./build_html; browserify ./standalone/browserify.js > ./build_html/static/js/jstiller.browser.js",
+    "build_server2": "browserify ./standalone/browserify.js > ./build_html/static/js/jstiller.browser.js",
     "start_server": "cd server;npm start",
     "cli": "./jstillery_cli.js \"$@\"",
     "start": "npm run start_server"
